# processamento_csv

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  criar_arquivos_csv.py  docker-compose.yml  env-sample  limpar_banco.py  processar_dados_dois_arquivos_por_vez.py  processar_dados_em_lote.py  processar_dados_um_por_um.py  pyproject.toml  run_tasks.py  tasks.py
